@@ -30,7 +30,6 @@
 
 #include <X11/Xarch.h>
 #include "xf86.h"
-#include "xf86_ansic.h"
 #include "compiler.h"
 #include "xf86_OSproc.h"
 #include "xaa.h"
