@@ -1,3 +1,11 @@
+2006-04-07  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/imstt.h:
+	* src/imstt_accel.c:
+	* src/imstt_driver.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 1.1.0.
+
 2006-02-08  Luc Verhaegen <libv@skynet.be>
 
 	* src/imstt_driver.c: (IMSTTPreInit):
